--- a/Webstudy01/webapp/WEB-INF/web.xml
+++ b/Webstudy01/webapp/WEB-INF/web.xml
@@ -5,6 +5,7 @@
 	version="3.1">
 	<display-name>webStudy01</display-name>
 	<welcome-file-list>
+		<welcome-file>index.do</welcome-file>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
 		<welcome-file>index.jsp</welcome-file>
