--- a/webStudy02_MVN/pom.xml
+++ b/webStudy02_MVN/pom.xml
@@ -24,10 +24,15 @@
 	</build>
 	<repositories>
 		<repository>
-			<id>jahia</id>
-			<url>https://maven.jahia.org/maven2/</url>
+			<id>oracle</id>
+			<name>ORACLE JDBC Repository</name>
+			<url>https://repo.spring.io/plugins-release/</url>
 		</repository>
+
 	</repositories>
+	<!-- <repositories> <repository> <id>oracle</id> <name>ORACLE JDBC Repository</name> 
+		<url>http://code.lds.org/nexus/content/groups/main-repo</url> </repository> 
+		</repositories> -->
 	<dependencies>
 		<!-- 서블릿 스펙의 기본 의존성 -->
 		<dependency>
@@ -71,7 +76,7 @@
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
-			<version>12.1.0.2</version>
+			<version>12.1.0.1-atlassian-hosted</version>
 		</dependency>
 	</dependencies>
 </project>
