--- a/webStudy02_MVN/pom.xml
+++ b/webStudy02_MVN/pom.xml
@@ -88,5 +88,10 @@
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.7.0</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.4</version>
+		</dependency>
 	</dependencies>
 </project>
