20200925 JSTL, 파일업로드

--- a/webStudy03_framework/src/main/webapp/WEB-INF/web.xml
+++ b/webStudy03_framework/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,9 @@
 	<welcome-file-list>
 		<welcome-file>index.do</welcome-file>
 	</welcome-file-list>
+	<listener>
+		<listener-class>kr.or.ddit.listener.SampleListener</listener-class>
+	</listener>
 	<context-param>
 		<param-name>testParam</param-name>
 		<param-value>paramValue</param-value>
@@ -31,9 +34,8 @@
 			<param-value>.jsp</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
-		<multipart-config></multipart-config>
+		<multipart-config />
 	</servlet>
-
 	<filter>
 		<filter-name>CharacterEncodingFilter</filter-name>
 		<filter-class>kr.or.ddit.filter.CharacterEncodingFilter</filter-class>
@@ -47,22 +49,6 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<filter>
-		<filter-name>AuthenticationFilter</filter-name>
-		<filter-class>kr.or.ddit.filter.AuthenticationFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>AuthenticationFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	<filter>
-		<filter-name>AuthorizationFilter</filter-name>
-		<filter-class>kr.or.ddit.filter.AuthorizationFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>AuthorizationFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	<filter>
 		<filter-name>FileUploadCheckFilter</filter-name>
 		<filter-class>kr.or.ddit.filter.FileUploadCheckFilter</filter-class>
 	</filter>
@@ -70,7 +56,6 @@
 		<filter-name>FileUploadCheckFilter</filter-name>
 		<url-pattern>*.do</url-pattern>
 	</filter-mapping>
-	
 	<servlet-mapping>
 		<servlet-name>FrontController</servlet-name>
 		<url-pattern>*.do</url-pattern>
