--- a/webStudy03_framework/pom.xml
+++ b/webStudy03_framework/pom.xml
@@ -50,6 +50,11 @@
 			<version>3.0.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
 
 		<!-- commons library -->
 		<dependency>
